--- a/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
+++ b/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
@@ -12,6 +12,7 @@
         var samples = {{ samples_name }}
         var ref_len = ref_seq.length;
         var depths = {{ depth_data }};
+        var mean = [ 1002, 2036, 5623, 8956, 5623, 5463]
         // create array from range 0 to (ref_len + 1)
         var positions = [...Array(ref_len + 1).keys()];
         // remove zero
@@ -103,24 +104,6 @@
             return series
         }
 
-        function randomAllele() {
-            return "ACGT"[Math.floor(Math.random() * 4)];
-        }
-
-        function randomPosition(ref_len) {
-            return Math.floor(Math.random() * ref_len);
-        }
-
-        function mockVariants(ref_len, n) {
-            var out = {};
-            while (Object.keys(out).length < n) {
-                var pos = randomPosition(ref_len);
-                var nt = randomAllele();
-                out[pos] = nt;
-            }
-            return out;
-        }
-
         var variants = {{ variant_data }}
         window.variants = variants;
 
@@ -161,7 +144,6 @@
             return series
         }
 
-
         function getGrids(samples) {
             var n = samples.length;
             var grids = Object.keys(samples).map(function (sample) {
@@ -174,10 +156,35 @@
                 var padTop = idx === 0 ? 5 : 2
                 grid.top = (idx / n * 100) + padTop + "%"
             })
-            console.log(grids)
+            //console.log(grids)
             return grids
         }
+        function meanCoverage(depths, start, end, gridIndex) {
+               var total = 0;
+               if (start < end){
+                   for (var i = start- 1; i <= end - 1; i++){
+                       total +=  depths[gridIndex][i]
+                   }
+                   return total/(end-start+1)
+               }
+               else if (start == end){
+                    return depths[gridIndex][start]
+               }
+        }
 
+        function median(arr) {
+            arr.sort( function(a,b) {return a - b;} );
+            var half = Math.floor(arr.length/2);
+            if(arr.length % 2)
+                return arr[half];
+            else
+                return (arr[half-1] + arr[half]) / 2.0;
+        }
+
+        function medianCoverage(depths, start, end, gridIndex) {
+           var sub_array = depths[gridIndex].slice(start-1, end).sort()
+           return median(sub_array)
+        }
 
         var options = {
             "title": {
@@ -193,7 +200,7 @@
                 "trigger": "axis",
                 "formatter": function (params) {
                     var output = "";
-                    // console.log(params);
+                    //console.log(params);
                     if (params.length > 1) {
                         console.log(params)
                     }
@@ -202,8 +209,21 @@
                     var sample = samples[i];
                     var depth = param.data[0];
                     var position = param.data[1];
-                    output += "<b>" + sample + "</b><br/>"
-                    output += 'Position: ' + position + '<br/>Depth: ' + depth + '<br/>';
+                    var st = [];
+                    var start_pos, end_pos;
+                    start_pos = Math.ceil(chart.getOption().dataZoom[0].start * ref_len / 100);
+                    if (start_pos == 0){
+                        start_pos = 1;
+                    }
+                    end_pos = Math.ceil(chart.getOption().dataZoom[0].end * ref_len / 100);
+                    var mean_cov;
+                    mean_cov = meanCoverage(depths, start_pos, end_pos, i).toFixed(2);
+                    var median_cov;
+                    median_cov = medianCoverage(depths, start_pos, end_pos, i).toFixed(2);
+                    output += "<b>" + sample + "</b><br/>" + 'Start pos: ' + start_pos+ '<br/>' + 'End pos: ' + end_pos + '<br/>';
+                    output += 'Mean Coverage: ' + mean_cov + 'X' + '<br/>';
+                    output += 'Median Coverage: ' + median_cov + 'X' + '<br/>';
+                    output += 'Position: ' + position + '<br/> Coverage Depth: ' + depth + '<br/>';
                     if (variants[i].hasOwnProperty(position)){
                         output += 'Ref: ' + ref_seq.substring(position-1, position-1 + variants[i][position][0].length) + '<br/>'
                     }
@@ -251,9 +271,9 @@
             ],
             "grid": getGrids(samples)
         };
+
         window.options = options;
         chart.setOption(options);
-
         function updateChartDivSize() {
           var BOTTOM_PADDING = 20;
           var top = $chart.getBoundingClientRect().top;
