--- a/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
+++ b/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
@@ -69,118 +69,92 @@
                 name: "5' UTR" ,
                 value: [0, utr_5_start , utr_5_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#32a852'
-                    }
+                    color:  '#a6cee3',
                 }
             },
             {
                 name: 'ORF1ab' ,
                 value: [1, orf1ab_start , orf1ab_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#a87f32'
-                    }
+                    color:  '#1f78b4'
                 }
             },
             {
                 name:  'S' ,
                 value: [2, s_start , s_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#32a89e'
-                    }
+                    color:  '#b2df8a'
                 }
             },
             {
                 name:  'ORF3a' ,
                 value: [3, orf3a_start , orf3a_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#FF33D0'
-                    }
+                    color:  '#33a02c'
                 }
             },
             {
                 name:  'E' ,
                 value: [4, e_start , e_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#B3C1B4'
-                    }
+                    color:  '#fb9a99'
                 }
             },
             {
                 name:  'M' ,
                 value: [5, m_start , m_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#5033FF'
-                    }
+                    color:  '#e31a1c'
                 }
             },
             {
                 name:  'ORF6' ,
                 value: [6, orf6_start , orf6_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#6D5BBC'
-                    }
+                    color:  '#fdbf6f'
                 }
             },
             {
                 name:  'ORF7a' ,
                 value: [7, orf7a_start , orf7a_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#33AAFF'
-                    }
+                    color:  '#ff7f00'
                 }
             },
             {
                 name:  'ORF8a' ,
                 value: [8, orf8a_start , orf8a_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#5B9D84'
-                    }
+                    color:  '#cab2d6'
                 }
             },
             {
                 name:  'N' ,
                 value: [9, n_start , n_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#000D06'
-                    }
+                    color:  '#6a3d9a'
                 }
             },
             {
                 name:  'ORF10' ,
                 value: [10, orf10_start , orf10_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#06510D'
-                    }
+                    color:  '#FF33D3'
                 }
             },
             {
                 name: "3' UTR" ,
                 value: [11, utr_3_start , utr_3_end, 0],
                 itemStyle: {
-                    normal: {
-                        color:  '#FF3333'
-                    }
+                    color:  '#b15928'
                 }
             },
             {
                 name: 'RBD' ,
                 value: [12, rdb_start , rdb_end, 30],
                 itemStyle: {
-                    normal: {
-                        color:  '#0006FC'
-                    }
-                }
+                    color:  '#0006fc',
+                },
             } 
         ]
         var y_start;
@@ -224,7 +198,7 @@
                     points: shape
                 },
                 style : api.style(
-                    {
+                    {   
                         text: annotation_data[categoryIndex].name, // display gene name of region
                         stroke: 'black', // border of shape, filled with black
                     }
@@ -245,6 +219,23 @@
                 "yAxisIndex": samples.length,
                 "renderItem":renderItem,
                 "data": annotation_data,
+                "tooltip":{
+                    "trigger": "item",
+                    "enterable": "true",
+                    "appendToBody": "true",
+                    "renderMode": "html",
+                    "borderRadius": 6,
+                    "borderWidth": 2,
+                    "textStyle": {
+                        "fontSize": 15,
+                        "fontWeight": "bolder"
+                    },
+                    "formatter": function (params){
+                        var output = ''
+                        output += 'Feature Name: ' +  params.name + '<br/>' + 'Start pos: ' + params.value[1] + '<br/>' + 'End pos: ' + params.value[2] + '<br/>' + 'Feature length: ' + (params.value[2] - params.value[1] + 1)
+                        return output
+                    }
+                }
             })
             return feature_series
         }
@@ -337,7 +328,7 @@
                         "color": '#666',
                         "opacity": 0
                     },
-                    "large": true
+                    "large": true,
                 })
             }
             return series
@@ -462,18 +453,13 @@
             "xAxis": getXAxes(samples, ref_len),
             "yAxis": getYAxes(samples),
             "series": [...getDepthSeries(samples), ...getVariantsSeries(variants, depths), ...gene_feature_series()],
-            
-            "tooltip": {
+            "tooltip": [{
                 "trigger": "axis",
                 "enterable": "true",
                 "appendToBody": "true",
                 "renderMode": "html",
                 "formatter": function (params) {
                     var output = "";
-                    //console.log(params);
-                    //if (params.length > 1) {
-                      //  console.log(params)
-                    //}
                     var param = params[0];
                     var i = param.axisIndex;
                     if (i < samples.length){
@@ -484,9 +470,6 @@
                         var start_pos, end_pos;
                         //start_pos = Math.floor(chart.getOption().dataZoom[0].start * ref_len / 100);
                         start_pos = Math.floor(chart.getOption().dataZoom[0].startValue)
-                        if (start_pos == 0){
-                            start_pos = 1;
-                        }
                         //end_pos = Math.floor(chart.getOption().dataZoom[0].end * ref_len / 100);
                         end_pos = Math.floor(chart.getOption().dataZoom[0].endValue)
                         var mean_cov;
@@ -515,13 +498,10 @@
                         return output;
                     }
                     else{
-                        //console.log(params)
                         return output
                     }
                 }
-            },
-            "brush": {
-            },
+            }],
             "toolbox": {
                 "show": "true",
                 "feature": {
