--- a/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
+++ b/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
@@ -6,7 +6,129 @@
     <script type="text/javascript" src="{{ echarts_js }}"></script>
 </head>
 <body>
-    <div id="chart" class="chart-container" style="width:100%; height:1200px;"></div>
+
+    <div class="tab">
+        <button class="tablinks" onclick="showChart(event,'chart')">Coverage Plot</button>
+        <button class="tablinks" onclick="showChart(event,'table_id')">Summary Information</button>
+    </div>
+
+    <div id="chart" class="chart-container" style="width:100%; height:1500px;"></div>
+
+    <table id="table_id" class="chart-container">
+        <tr>
+            <th>Sample Name</th>
+            <th>Mean Covearge</th>
+            <th>Median Covearge</th>
+            <th>Genome Coverage(>= 10x)</th>
+            <th>Low Coverage Positions (< 10X) </th>
+            <th>No Coverage Positions (0X)</th>
+            <th>Low Coverage Regions (< 10X)</th>
+            <th>No Coverage Regions (0X)</th>
+        </tr>
+        {% for data_info in coverage_stat %}
+            <tr>
+                <td>{{ data_info[0] }}</td>
+                <td>{{ data_info[1] }}</td>
+                <td>{{ data_info[2] }}</td>
+                <td>{{ data_info[3] }}</td>
+                <td>{{ data_info[4] }}</td>
+                <td>{{ data_info[5] }}</td>
+                <td>{{ data_info[6] }}</td>
+                <td>{{ data_info[7] }}</td>
+            </tr>
+        {% endfor %}
+    </table>
+
+    <style>
+        .tab {
+            overflow: hidden;
+            border: 1px solid #ccc;
+            background-color: #f1f1f1;
+        }
+
+        .tab button {
+            background-color: inherit;
+            float: left;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            padding: 5px 16px;
+            transition: 0.3s;
+        }
+
+        .tab button:hover {
+            background-color: #ddd;
+        }
+
+        .tab button.active {
+            background-color: #ccc;
+        } 
+        
+        .chart-container {
+            display: none;
+            padding: 6px 12px;
+        }
+
+        #table_id {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            padding-top: 1%;
+            width: 100%;
+        }
+
+        #table_id td, #table_id th {
+            border: 1px solid #ddd;
+            padding: 8px;
+        }
+
+        #table_id tr:nth-child(even){
+            background-color: #f2f2f2;
+        }
+
+        #table_id tr:hover {
+            background-color: #ddd;
+        }
+
+        #table_id tr {
+            justify-content: space-between;
+        }
+
+        #table_id th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: left;
+            background-color: #04AA6D;
+            color: white;
+            justify-content: space-between;
+        }
+    </style>
+
+    <script>
+
+        (function() {
+            containers = document.getElementsByClassName("chart-container");
+            if(containers.length > 0) {
+                containers[0].style.display = "block";
+            }
+        })()
+
+        function showChart(evt, chartID) {
+            let containers = document.getElementsByClassName("chart-container");
+            for (let i = 0; i < containers.length; i++) {
+                    containers[i].style.display = "none";
+            }
+
+            let tablinks = document.getElementsByClassName("tablinks");
+            for (let i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = "tablinks";
+            }
+
+            document.getElementById(chartID).style.display = "block";
+            evt.currentTarget.className += " active";
+        }
+    </script>
+
+
     <script>
         var samples = {{ samples_name }}
         var ref_seq = "{{ ref_seq }}";
@@ -385,20 +507,21 @@
             var last_height;
             var last_top;
             var grids = Object.keys(samples).map(function (sample) {
-                last_height = (1 / n * 100) - 10 
+                last_height = (1 / n * 100) - 6 
                 return {
                     "show": true,
-                    "height": (1 / n * 100) - 10 + "%"
+                    "height": (1 / n * 100) - 6 + "%"
                 };
             });
             grids.forEach(function (grid, idx) {
-                var padTop = idx === 0 ? 5 : 2
+                //var padTop = idx === 0 ? 3 : 2
+                var padTop = 3
                 last_top = (idx / n * 100) + padTop
                 grid.top = (idx / n * 100) + padTop + "%"
             })
             grids.push({
                 "show": true,
-                "height": "10%",
+                "height": "8%",
                 "top": last_height + last_top + 3 + "%"
             })
             return grids
@@ -445,9 +568,6 @@
 
         var options = {
             "title": {
-                "text": "Coverage Plot",
-                "textAlign": "center",
-                "left": "45%"
             },
             "dataset": getDatasets(depths, positions),
             "xAxis": getXAxes(samples, ref_len),
