--- a/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
+++ b/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
@@ -139,8 +139,9 @@
         </ul>
         <h3 class="row-content">License</h3>
         <ul>
-            <p><strong>&copy 2021 Canadian Food Inspection Agency of Canada, Government of Canada.</strong></p>
-            <p><strong>Distributed under the MIT license.</strong></p>
+            <a href="https://inspection.canada.ca/science-and-research/our-laboratories/ncfad-winnipeg/eng/1549576575939/1549576643836"><img src="https://avatars.githubusercontent.com/u/83306868?s=200&v=4" width="50" height="50"></a>
+            <p style="text-align: center"><strong>&copy 2021 Canadian Food Inspection Agency of Canada, Government of Canada.</strong></p>
+            <p style="text-align: center"><strong>Distributed under the MIT license.</strong></p>
         </ul>
         
     </div>
@@ -170,6 +171,11 @@
     </table>
 
     <style>
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
         .tab {
             overflow: hidden;
             border: 1px solid #ccc;
