handle case of empty vcf file and samples does not have variant info

--- a/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
+++ b/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
@@ -157,7 +157,8 @@
     <div id="fqa_id" class="chart-container">
         <h4>What happens when the number of samples shown on the chart changed?</h4>
         <ul>
-            <li>The entire chart will be re-rendered and you need to set your chart options again. Changing other options will not re-render the entire chart</li>
+            <li>By the default, at first up to 3 first samples are selected for displaying on the charts</li>
+            <li>The entire chart will be re-rendered if you select/change samples to be displayed and you need to set your chart options again, changing other options will not re-render the entire chart</li>
         </ul>
 
         <h4>What happens when browser zoom is set more than 100%?</h4>
@@ -165,7 +166,7 @@
             <li>Some minor graphic (such as some items get cut off) issues may happen. To fix this type of issue, try to adjust browser zoom and this may allow you to have better view</li>
         </ul>
 
-        <h4>How many simultaneous samples on the chart for the best view?</h4>
+        <h4>How many simultaneous samples are on the chart for the best view?</h4>
         <ul>
             <li>It is recommended that having around 5 simultaneous samples on the chart for the best view</li>
         </ul>
