--- a/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
+++ b/sequencing_coverage_plot/coverage_plot/tmpl/stack_coverage_template.html
@@ -74,7 +74,7 @@
                 <label for="start_pos">Start Pos:</label><br>
                 <input type="number" id="start_pos" value=1><br>
                 <label for="start_pos">End Pos:</label><br>
-                <input type="number" id="end_pos" value=29903><br><br>
+                <input type="number" id="end_pos" value={{ref_seq_length}}><br><br>
                 <input type="button" onclick="setDataZoom()" value="Set DataZoom">
                 <input type="button" onclick="resetDataZoom()" value="Reset DataZoom">
             </form>
